unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_EAN__c.field-meta.xml
<CustomField>
    <fullName>EBH_EAN__c</fullName>
    <description>[EBH] (EPH-4163) - EAN #</description>
    <label>EAN #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>