unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_eBayItemID__c.field-meta.xml
<CustomField>
    <fullName>EBH_eBayItemID__c</fullName>
    <description>[EBH] (EPH-4163) - eBay Item ID</description>
    <label>eBay Item ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>