unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_eBayLink__c.field-meta.xml
<CustomField>
    <fullName>EBH_eBayLink__c</fullName>
    <description>[EBH] (EPH-4163) - eBay Link</description>
    <formula>IF( ISBLANK( EBH_eBayItemID__c ), &quot;Item ID missing&quot;, 
if( TEXT ( EBH_DealSiteId__c ) =&quot;77&quot;,HYPERLINK(&quot;http://www.ebay.de/itm/&quot;&amp; EBH_eBayItemID__c, &quot;Open in eBay&quot;),
if( TEXT ( EBH_DealSiteId__c ) =&quot;3&quot;,HYPERLINK(&quot;http://www.ebay.co.uk/itm/&quot;&amp; EBH_eBayItemID__c, &quot;Open in eBay&quot;),
if( TEXT ( EBH_DealSiteId__c ) =&quot;71&quot;,HYPERLINK(&quot;http://www.ebay.fr/itm/&quot;&amp; EBH_eBayItemID__c, &quot;Open in eBay&quot;),
if( TEXT ( EBH_DealSiteId__c ) =&quot;101&quot;,HYPERLINK(&quot;http://www.ebay.it/itm/&quot;&amp; EBH_eBayItemID__c, &quot;Open in eBay&quot;),
if( TEXT ( EBH_DealSiteId__c ) =&quot;186&quot;,HYPERLINK(&quot;http://www.ebay.es/itm/&quot;&amp; EBH_eBayItemID__c, &quot;Open in eBay&quot;),
if( TEXT ( EBH_DealSiteId__c ) =&quot;15&quot;,HYPERLINK(&quot;http://www.ebay.com.au/itm/&quot;&amp; EBH_eBayItemID__c, &quot;Open in eBay&quot;),
HYPERLINK(&quot;http://www.ebay.com/itm/&quot;&amp; EBH_eBayItemID__c, &quot;Open in eBay&quot;)
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eBay Link</label>
    <type>Text</type>
</CustomField>