unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_GMV__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMV__c</fullName>
    <description>[EBH] (EPH-4163) - GMV</description>
    <formula>IF( EBH_SoldItemsForecast__c &gt; 0, EBH_SoldItemsForecast__c * EBH_DealPrice__c, EBH_Quantity__c * EBH_DealPrice__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GMV (Planned)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>