unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_GMV_Generated__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMV_Generated__c</fullName>
    <formula>EBH_SoldItems__c * EBH_DealPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>GMV generated in total during the deal timeframe irrespective of the deal sold price, returns or cancelations.</inlineHelpText>
    <label>GMV (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>