unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_GMV_Generated_at_Deal_Price__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMV_Generated_at_Deal_Price__c</fullName>
    <formula>EBH_Sold_Items_at_Deal_Price__c *  EBH_DealPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>GMV generated at agreed Deal Price only. Items sold by higher or lower price are excluded.</inlineHelpText>
    <label>GMV (Deal Price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>