unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_GMVLC__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVLC__c</fullName>
    <description>EPH-5169 performance mapping filed for DWH data</description>
    <inlineHelpText>GMV Local Currency</inlineHelpText>
    <label>GMV (LC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>