unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_GMVUSD__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVUSD__c</fullName>
    <label>GMV (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>