unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_GPDealID__c.field-meta.xml
<CustomField>
    <fullName>EBH_GPDealID__c</fullName>
    <description>[EBH] (EPH-4527) - GPDeal ID</description>
    <externalId>true</externalId>
    <label>GPDeal ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>