unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_IdealoLink__c.field-meta.xml
<CustomField>
    <fullName>EBH_IdealoLink__c</fullName>
    <description>[EBH] (EPH-4527) - Idealo Link</description>
    <label>Idealo Link</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>