unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_LocalDealFormat__c.field-meta.xml
<CustomField>
    <fullName>EBH_LocalDealFormat__c</fullName>
    <description>[EBH] (EPH-4163) - Local Deal Format</description>
    <formula>If(  Seller_Growth_Portal_Culture__c ==&#39;DE&#39;, CASE(TEXT( EBH_DealFormat__c ), 
&quot;Primary&quot;, &quot;WOW! Angebot des Tages&quot;, 
&quot;Featured&quot;, &quot;WOW! Angebot der Woche&quot;, 
&quot;Core&quot;, &quot;Basket Deal&quot;, 
TEXT(EBH_DealFormat__c)), 

IF(  Seller_Growth_Portal_Culture__c ==&#39;IT&#39; , CASE(TEXT( EBH_DealFormat__c ), 
&quot;Primary&quot;, &quot;Imperdibili Giornalieri&quot;, 
&quot;Featured&quot;, &quot;Imperdibili Settimanali&quot;, 
&quot;Core&quot;, &quot;Offerte Core&quot;, 
TEXT(EBH_DealFormat__c)),

IF(  Seller_Growth_Portal_Culture__c ==&#39;FR&#39; , CASE(TEXT( EBH_DealFormat__c ), 
&quot;Primary&quot;, &quot;Top Bons Plans&quot;, 
&quot;Featured&quot;, &quot;Bons Plans&quot;, 
&quot;Core&quot;, &quot;Autres Offres&quot;, 
TEXT(EBH_DealFormat__c)),

IF(  Seller_Growth_Portal_Culture__c ==&#39;ES&#39; , CASE(TEXT( EBH_DealFormat__c ), 
&quot;Primary&quot;, &quot;N/A&quot;, 
&quot;Featured&quot;,  &quot;N/A&quot;, 
&quot;Core&quot;, &quot;ofertas semanales&quot;, 
TEXT(EBH_DealFormat__c)), TEXT(EBH_DealFormat__c)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Deal Format</label>
    <type>Text</type>
</CustomField>