unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_MaximumPurchases__c.field-meta.xml
<CustomField>
    <fullName>EBH_MaximumPurchases__c</fullName>
    <description>[EBH] (EPH-4172) - Export deal</description>
    <label>Maximum Purchases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>