unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_NonPayoutSI__c.field-meta.xml
<CustomField>
    <fullName>EBH_NonPayoutSI__c</fullName>
    <inlineHelpText>Items from returned or canceled transactions. Default tracking period is 30 days after Deal End Date.</inlineHelpText>
    <label>Non-Payout Sold Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>