unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_Payout_SI__c.field-meta.xml
<CustomField>
    <fullName>EBH_Payout_SI__c</fullName>
    <description>This field was designed for ETL</description>
    <label>Payout Sold Items (not used)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>