unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_Payout_SI_calc__c.field-meta.xml
<CustomField>
    <fullName>EBH_Payout_SI_calc__c</fullName>
    <description>US-0008748 - Deals - Limiting Subsidy Payout Calculation to Max Agreed Qty
US-0010371</description>
    <formula>IF(EBH_Payout_SI__c &gt; EBH_Quantity__c, EBH_Quantity__c, EBH_Payout_SI__c +  AdjustedSoldItems__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Items sold at agreed Deal Price excluding returns and cancelations. Cannot be higher than the agreed Quantity for the deal.
Default tracking period is 30 days after Deal End Date.</inlineHelpText>
    <label>Payout Sold Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>