unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_PictureLink__c.field-meta.xml
<CustomField>
    <fullName>EBH_PictureLink__c</fullName>
    <description>[EBH] (EPH- ) - Picture Link</description>
    <label>Picture Link</label>
    <type>Url</type>
</CustomField>