unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_Pricenotmatching__c.field-meta.xml
<CustomField>
    <fullName>EBH_Pricenotmatching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-4163) - Price not matching</description>
    <label>Price not matching</label>
    <type>Checkbox</type>
</CustomField>