unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_ProductTitle__c.field-meta.xml
<CustomField>
    <fullName>EBH_ProductTitle__c</fullName>
    <description>[EBH] (EPH-4163) - Product Title
US-0009410 - DEALS: Increase &#39;Product Title&#39; field length to 150 characters</description>
    <label>Product Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>