unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_Quantity__c.field-meta.xml
<CustomField>
    <fullName>EBH_Quantity__c</fullName>
    <description>[EBH] (EPH-4163) - Quantity</description>
    <inlineHelpText>Number of units seller can commit of the item at the deal price</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>