unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_ReasonforRejection__c.field-meta.xml
<CustomField>
    <fullName>EBH_ReasonforRejection__c</fullName>
    <description>[EBH] (EPH-4163) - Reason for Rejection</description>
    <label>Reason for Rejection</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EBH_DealSiteId__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Preis zu hoch</fullName>
            </value>
            <value>
                <fullName>Fehlende oder falsche Angaben</fullName>
            </value>
            <value>
                <fullName>Angebotene Menge zu gering</fullName>
            </value>
            <value>
                <fullName>Deal bereits anderweitig vereinbart</fullName>
            </value>
            <value>
                <fullName>Abverkaufspotenzial zu gering</fullName>
            </value>
            <value>
                <fullName>Saisonal nicht relevant</fullName>
            </value>
            <value>
                <fullName>Schlechte Bildqualität</fullName>
            </value>
            <value>
                <fullName>Falsche Kategorie</fullName>
            </value>
            <value>
                <fullName>Deal-Frequenz zu hoch</fullName>
            </value>
            <value>
                <fullName>Ist bereits im Basket</fullName>
            </value>
            <value>
                <fullName>Low revenue potential</fullName>
            </value>
            <value>
                <fullName>Quantity is too low</fullName>
            </value>
            <value>
                <fullName>Similar deal already agreed</fullName>
            </value>
            <value>
                <fullName>Supply exceeds demand</fullName>
            </value>
            <value>
                <fullName>Incorrect eBay category</fullName>
            </value>
            <value>
                <fullName>Missing or incorrect information</fullName>
            </value>
            <value>
                <fullName>Already promoted</fullName>
            </value>
            <value>
                <fullName>Price is too high</fullName>
            </value>
            <value>
                <fullName>Out of season</fullName>
            </value>
            <value>
                <fullName>Poor picture quality</fullName>
            </value>
            <value>
                <fullName>Prix trop élevé</fullName>
            </value>
            <value>
                <fullName>Informations manquantes ou incorrectes</fullName>
            </value>
            <value>
                <fullName>Quantité insuffisante</fullName>
            </value>
            <value>
                <fullName>Promo similaire déjà acceptée</fullName>
            </value>
            <value>
                <fullName>Faible potentiel de revenu</fullName>
            </value>
            <value>
                <fullName>Hors saison</fullName>
            </value>
            <value>
                <fullName>Photo de mauvaise qualité</fullName>
            </value>
            <value>
                <fullName>Catégorie eBay incorrecte</fullName>
            </value>
            <value>
                <fullName>Offre supérieure à la demande</fullName>
            </value>
            <value>
                <fullName>Annonce déjà sponsorisée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>