unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_ReasonforRejectionextd__c.field-meta.xml
<CustomField>
    <fullName>EBH_ReasonforRejectionextd__c</fullName>
    <description>[EBH] (EPH-4163) - Reason for Rejection (extd.)</description>
    <label>Reason for Rejection (extd.)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>