unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_RecommendedRetailPriceWAS__c.field-meta.xml
<CustomField>
    <fullName>EBH_RecommendedRetailPriceWAS__c</fullName>
    <description>[EBH] (EPH-4163) - Recommended Retail Price / WAS</description>
    <label>Recommended Retail Price / WAS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RRP</fullName>
            </value>
            <value>
                <fullName>WAS</fullName>
            </value>
            <value>
                <fullName>List Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>