unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_RRPWASPrice__c.field-meta.xml
<CustomField>
    <fullName>EBH_RRPWASPrice__c</fullName>
    <description>[EBH] (EPH-4163) - RRP/WAS Price</description>
    <inlineHelpText>Price of strikethrough or previous existing price of deal</inlineHelpText>
    <label>RRP/WAS Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>