unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SellerAccepted__c.field-meta.xml
<CustomField>
    <fullName>EBH_SellerAccepted__c</fullName>
    <description>[EBH] (EPH-4163) - Seller Accepted</description>
    <label>Seller Accepted</label>
    <type>DateTime</type>
</CustomField>