unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SellerAcceptedFrom__c.field-meta.xml
<CustomField>
    <fullName>EBH_SellerAcceptedFrom__c</fullName>
    <description>[EBH] (EPH-4163) - Seller Accepted From</description>
    <label>Seller Accepted From</label>
    <length>50</length>
    <type>Text</type>
</CustomField>