unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SellerEmail__c.field-meta.xml
<CustomField>
    <fullName>EBH_SellerEmail__c</fullName>
    <description>[EBH] (EPH-4163) - Seller Email</description>
    <label>Seller Email</label>
    <type>Email</type>
</CustomField>