unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SellerPrice__c.field-meta.xml
<CustomField>
    <fullName>EBH_SellerPrice__c</fullName>
    <description>[EBH] (EPH-4163) - Seller Price</description>
    <inlineHelpText>Price seller has submitted as their offer price for the deal﻿</inlineHelpText>
    <label>Seller Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>