unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_Sold_Items_at_Deal_Price__c.field-meta.xml
<CustomField>
    <fullName>EBH_Sold_Items_at_Deal_Price__c</fullName>
    <description>US-0008748 - Deals - Limiting Subsidy Payout Calculation to Max Agreed Qty</description>
    <formula>EBH_Payout_SI__c + EBH_NonPayoutSI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sold Items at agreed Deal Price. Items sold by higher or lower price are excluded.</inlineHelpText>
    <label>Sold Items (Deal Price)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>