unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SoldItems__c.field-meta.xml
<CustomField>
    <fullName>EBH_SoldItems__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[EBH] (EPH-4163) - Sold Items</description>
    <inlineHelpText>Sold Items during the deal timeframe irrespective of the deal sold price, returns or cancelations.</inlineHelpText>
    <label>Sold Items (Total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>