unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SoldItemsForecast__c.field-meta.xml
<CustomField>
    <fullName>EBH_SoldItemsForecast__c</fullName>
    <description>[EBH] (EPH-4163) - Sold Items (Forecast)</description>
    <label>Sold Items (Forecast)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>