unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SpotlightCategory__c.field-meta.xml
<CustomField>
    <fullName>EBH_SpotlightCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (EPH-4163) - Spotlight Category</description>
    <label>Spotlight Category</label>
    <referenceTo>EBH_SpotlightCategory__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>EBH_SpotlightCategory</relationshipName>
    <type>Lookup</type>
</CustomField>