unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SpotlightFeature__c.field-meta.xml
<CustomField>
    <fullName>EBH_SpotlightFeature__c</fullName>
    <description>[EBH] (EPH-4163) - Spotlight Feature</description>
    <label>Spotlight Feature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Smartphones</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Home Entertainment</fullName>
            </value>
            <value>
                <fullName>Weiter Elektronik</fullName>
            </value>
            <value>
                <fullName>Heimwerken</fullName>
            </value>
            <value>
                <fullName>Zuhause/Möbel</fullName>
            </value>
            <value>
                <fullName>Haushaltsgeräte</fullName>
            </value>
            <value>
                <fullName>Fashion für Ihn</fullName>
            </value>
            <value>
                <fullName>Schuhe</fullName>
            </value>
            <value>
                <fullName>Basic Fashion</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Spielzeug</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>P&amp;A</fullName>
            </value>
            <value>
                <fullName>Erotik</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>