unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SpotlightFeaturedID__c.field-meta.xml
<CustomField>
    <fullName>EBH_SpotlightFeaturedID__c</fullName>
    <description>[EBH] (EPH-4163) - Spotlight Featured ID</description>
    <formula>EBH_SpotlightCategory__r.EBH_SpotlightCategoryID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spotlight Featured ID</label>
    <type>Text</type>
</CustomField>