unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_StartDateMonthYear__c.field-meta.xml
<CustomField>
    <fullName>EBH_StartDateMonthYear__c</fullName>
    <description>[EBH] (EPH- ) - Start Date Month Year</description>
    <formula>TEXT(MONTH( EBH_DealStartDate__c )) &amp; TEXT(YEAR( EBH_DealStartDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Month Year</label>
    <type>Text</type>
</CustomField>