unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_Status__c.field-meta.xml
<CustomField>
    <fullName>EBH_Status__c</fullName>
    <description>[EBH] (EPH-4163) - Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Incomplete Data</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Negotiating Amended</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Seller Invite</fullName>
            </value>
            <value>
                <fullName>Seller Proposal</fullName>
            </value>
            <value>
                <fullName>Deal Agreed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Ops Review</fullName>
            </value>
            <value>
                <fullName>CM Review</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Verify Statement</fullName>
            </value>
            <value>
                <fullName>Statement Verified</fullName>
                <label>Statement Verified (Trigger Email to Seller)</label>
            </value>
            <value>
                <fullName>Clarification Required</fullName>
            </value>
            <value>
                <fullName>Verify Invoice</fullName>
            </value>
            <value>
                <fullName>Invoice Rejected (Email resend to Seller)</fullName>
            </value>
            <value>
                <fullName>Ready for Payment</fullName>
            </value>
            <value>
                <fullName>Payment Sent</fullName>
            </value>
            <value>
                <fullName>Payment Completed</fullName>
            </value>
            <value>
                <fullName>Payment Rejected</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Visual Sales Path</fullName>
            </value>
            <value>
                <fullName>In Approval</fullName>
            </value>
            <value>
                <fullName>Internally Approved</fullName>
            </value>
            <value>
                <fullName>Internally Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>