unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>EBH_Subsidy__c</fullName>
    <description>[EBH] (EPH-4163) - Subsidy</description>
    <formula>IF( EBH_DealPrice__c &gt; 0, ROUND((EBH_SellerPrice__c - EBH_DealPrice__c),2) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidy per Sold Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>