unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SubsidyFinal__c.field-meta.xml
<CustomField>
    <fullName>EBH_SubsidyFinal__c</fullName>
    <description>[EBH] (EPH-4163) - Subsidy Final
[#EPH-7598] Deal Object - Subsidy fields redesign for Invoicing</description>
    <formula>IF( OR(ISBLANK(Subsidy_Payout_Amount__c),Subsidy_Payout_Amount__c=0), SubsidyFinal_Servicing__c, Subsidy_Payout_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidy Final (Gross)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>