unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SubsidyForecast__c.field-meta.xml
<CustomField>
    <fullName>EBH_SubsidyForecast__c</fullName>
    <description>[EBH] (EPH-4163) - Subsidy Forecast
Use Subsidy Forecast  (Subsidy_Forecast__c) instead [#EPH-7598] Deal Object - Subsidy fields redesign for Invoicing
[#EPH-7598] Deal Object - Subsidy fields redesign for Invoicing
[US-0007130] Deals - Subsidy Formula Corrections</description>
    <formula>IF(AND(( TODAY() &lt;= EBH_DealTrackingEndDate__c ),(TODAY() &gt;= EBH_DealEndDate__c)),((EBH_SoldItems__c*EBH_Subsidy__c)-(EBH_SoldItems__c * EBH_Subsidy__c * Non_Payout_Items_Estimate_N__c))/(VAT_N__c + 1),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated net subsidy (changing with non-payouts until tracking end date)</inlineHelpText>
    <label>Subsidy Forecast Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>