unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SubsidyMax__c.field-meta.xml
<CustomField>
    <fullName>EBH_SubsidyMax__c</fullName>
    <description>[EBH] (EPH-4163) - Subsidy Max</description>
    <formula>IF(OR(ISPICKVAL(EBH_Status__c , &quot;Planned&quot;),ISPICKVAL(EBH_Status__c , &quot;Deal Agreed&quot;),ISPICKVAL(EBH_Status__c , &quot;Running&quot;)),(((EBH_Quantity__c * EBH_Subsidy__c)/(VAT_N__c +1)) - Subsidy_Running__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Planned net subsidy spend for the deal (reduced by running deals subsidy), will be 0 once deal is executed</inlineHelpText>
    <label>Subsidy Planned Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>