unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_SubsidyP__c.field-meta.xml
<CustomField>
    <fullName>EBH_SubsidyP__c</fullName>
    <description>[EBH] (EPH-4163) - Subsidy %</description>
    <formula>IF( EBH_DealPrice__c &gt; 0, EBH_Subsidy__c / EBH_DealPrice__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidy %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>