unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_UID__c.field-meta.xml
<CustomField>
    <fullName>EBH_UID__c</fullName>
    <description>[EBH] (EPH- ) - UID</description>
    <formula>IF(TEXT( EBH_DealFormat__c )=&quot;Primary&quot;, 
TEXT( EBH_DealFormat__c ) &amp; TEXT(EBH_Vertical__c) &amp; TEXT( EBH_DealStartDate__c ), 
TEXT( EBH_DealFormat__c ) &amp; TEXT(EBH_Vertical__c) &amp; TEXT( EBH_DealStartDate__c - 
CASE( MOD( EBH_DealStartDate__c - DATE(1900, 1, 7), 7), 0, 6, 1, 0, 2, 1, 3, 
2, 4, 3, 5, 4, 6, 5,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UID</label>
    <type>Text</type>
</CustomField>