unpackaged/main/default/objects/EBH_Deal__c/fields/EBH_Vertical__c.field-meta.xml
<CustomField>
    <fullName>EBH_Vertical__c</fullName>
    <description>[EBH] (EPH-4163) - Vertical</description>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EBH_DealSiteId__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Soft Home</fullName>
            </value>
            <value>
                <fullName>Hard Home</fullName>
            </value>
            <value>
                <fullName>P&amp;A</fullName>
            </value>
            <value>
                <fullName>Health &amp; Beauty</fullName>
            </value>
            <value>
                <fullName>Sports &amp; Leisure</fullName>
            </value>
            <value>
                <fullName>Fitness</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Joyería y Belleza</fullName>
            </value>
            <value>
                <fullName>Electrónica</fullName>
            </value>
            <value>
                <fullName>Moda</fullName>
            </value>
            <value>
                <fullName>Casa y Jardín</fullName>
            </value>
            <value>
                <fullName>Ocio</fullName>
            </value>
            <value>
                <fullName>Deportes</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Coleccionismo</fullName>
            </value>
            <value>
                <fullName>Otras categorías</fullName>
            </value>
            <value>
                <fullName>High-Tech</fullName>
            </value>
            <value>
                <fullName>Mode</fullName>
            </value>
            <value>
                <fullName>Maison &amp; Jardin</fullName>
            </value>
            <value>
                <fullName>Auto et Moto</fullName>
            </value>
            <value>
                <fullName>Collections &amp; Antiquités</fullName>
            </value>
            <value>
                <fullName>Tecnologia</fullName>
            </value>
            <value>
                <fullName>Casa &amp; Giardino</fullName>
            </value>
            <value>
                <fullName>Sport &amp; Viaggi</fullName>
            </value>
            <value>
                <fullName>Auto &amp; Moto</fullName>
            </value>
            <value>
                <fullName>Collezionabili</fullName>
            </value>
            <value>
                <fullName>Commercio, Ufficio e Industria</fullName>
            </value>
            <value>
                <fullName>Suministros industriales</fullName>
            </value>
            <value>
                <fullName>H&amp;G</fullName>
            </value>
            <value>
                <fullName>Parts &amp; BI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>