unpackaged/main/default/objects/EBH_Deal__c/fields/EPID__c.field-meta.xml
<CustomField>
    <fullName>EPID__c</fullName>
    <description>US-0009618</description>
    <label>EPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>