unpackaged/main/default/objects/EBH_Deal__c/fields/EPID_Price__c.field-meta.xml
<CustomField>
    <fullName>EPID_Price__c</fullName>
    <description>US-0009618</description>
    <label>EPID Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>