unpackaged/main/default/objects/EBH_Deal__c/fields/Exported__c.field-meta.xml
<CustomField>
    <fullName>Exported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008225</description>
    <label>Exported</label>
    <type>Checkbox</type>
</CustomField>