unpackaged/main/default/objects/EBH_Deal__c/fields/Final_Sold_Items__c.field-meta.xml
<CustomField>
    <fullName>Final_Sold_Items__c</fullName>
    <label>Final Sold Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>