unpackaged/main/default/objects/EBH_Deal__c/fields/Free_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Free_Shipping__c</fullName>
    <description>US-0009618</description>
    <label>Free Shipping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>