unpackaged/main/default/objects/EBH_Deal__c/fields/Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0010706 - [DE-Deals-Fulfillment] Flag to Identify the fulfillment Invite Deals/ Few BU Feedback</description>
    <label>Fulfillment</label>
    <type>Checkbox</type>
</CustomField>