unpackaged/main/default/objects/EBH_Deal__c/fields/GalleryDealPicture__c.field-meta.xml
<CustomField>
    <fullName>GalleryDealPicture__c</fullName>
    <formula>IMAGE( PictureURL__c  , &#39;Gallery Picture&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GalleryDealPicture</label>
    <type>Text</type>
</CustomField>