unpackaged/main/default/objects/EBH_Deal__c/fields/GalleryURL__c.field-meta.xml
<CustomField>
    <fullName>GalleryURL__c</fullName>
    <description>Gallery URL from ebay</description>
    <label>GalleryURL</label>
    <type>Url</type>
</CustomField>