unpackaged/main/default/objects/EBH_Deal__c/fields/GMV_Last_30_Days_DWH__c.field-meta.xml
<CustomField>
    <fullName>GMV_Last_30_Days_DWH__c</fullName>
    <description>US-0009618</description>
    <label>GMV Last 30 Days (DWH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>