unpackaged/main/default/objects/EBH_Deal__c/fields/GMV_UDAF__c.field-meta.xml
<CustomField>
    <fullName>GMV_UDAF__c</fullName>
    <description>US-0010752 - retrieve UDAF Sold Items for NA Unsub Deals</description>
    <inlineHelpText>Unsubsidized Deals Awareness Flow GMV</inlineHelpText>
    <label>GMV (UDAF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>