unpackaged/main/default/objects/EBH_Deal__c/fields/Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time__c</fullName>
    <description>US-0009618</description>
    <label>Handle Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>