unpackaged/main/default/objects/EBH_Deal__c/fields/Internally_Approved_Rejected_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Internally_Approved_Rejected_Timestamp__c</fullName>
    <description>US-0010280 - Email is not sent when deal is internally approved</description>
    <label>Internally Approved/Rejected Timestamp</label>
    <type>DateTime</type>
</CustomField>